@startuml

package "ch.etmles.payroll" {
    class PayrollApplication {
        +main(String[): void
    }

    "PayrollApplication" --> "SpringApplication"

    package "Department" {
        class "DepartmentService" {
            {static}+ressourceName: String
            +getAll(): DepartmentEntity[]
            +getById(Long): DepartmentEntity
            +create(DepartmentEntity): DepartmentEntity
            +update(Long, DepartmentEntity): DepartmentEntity
            +delete(Long): void
        }

        class "DepartmentController" {
            +all(): DepartmentEntity[]
            +newEmployee(DepartmentEntity): DepartmentEntity
            +one(Long): DepartmentEntity
            +replaceDepartment(DepartmentEntity, Long): DepartmentEntity
            +deleteDepartment(Long): void
        }

        class "DepartmentEntity"{
            (...)
        }

        interface "DepartmentRepository"<extends JARepository<DepartmentEntity, Long>>

        "DepartmentController" --> "DepartmentService"
        "DepartmentController" --> "DepartmentEntity"
        "DepartmentService" --> "DepartmentRepository"
        "DepartmentService" --> "DepartmentEntity"
    }

    "DepartmentService" --> "Exceptions"

    package "Employee" {
        class "EmployeeService" {
            {static}+ressourceName: String
            +getAll(): EmployeeEntity[]
            +getById(Long): EmployeeEntity
            +create(EmployeeEntity): EmployeeEntity
            +update(Long, EmployeeEntity): EmployeeEntity
            +delete(Long): void
            +joinDepartment(Long, Long): void
            +leaveDepartment(Long): void
        }

        class "EmployeeController" {
            +all(): EmployeeEntity[]
            +newEmployee(EmployeeEntity): EmployeeEntity
            +one(Long): EmployeeEntity
            +replaceEmployee(EmployeeEntity, Long): EmployeeEntity
            +deleteEmployee(Long): void
            +joinDepartment(Long, Long): void
            +leaveDepartment(Long): void
        }

        class "EmployeeEntity" {
            (...)
        }

        class "EmployeeAdvice"
        exception "EmployeeNotInDepartment"
        exception "EmployeeAlreadyInDepartment"

        interface "EmployeeRepository"<extends JARepository<EmployeeEntity, Long>>

        "EmployeeController" --> "EmployeeService"
        "EmployeeController" --> "EmployeeEntity"
        "EmployeeService" --> "EmployeeRepository"
        "EmployeeService" -> "EmployeeEntity"
        "EmployeeService" --> "EmployeeNotInDepartment"
        "EmployeeService" --> "EmployeeAlreadyInDepartment"

        "EmployeeService" --> "DepartmentService"
    }

    "EmployeeService" --> "Exceptions"

    package "Exceptions" {
        exception "ResourceIDNotFound"
        exception "ResourceDeleteNotFound"
        class "ResourceNotFoundAdvice"
    }

    class "LoadDatabase" {
        initEmployees(EmployeeRepository): CommandLineRunner
        initDepartments(DepartmentRepository): CommandLineRunner
    }
}

@enduml